--- a/part06/index.html
+++ b/part06/index.html
@@ -5,11 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vue introduction - part06</title>
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <style>
+      .header h1 {
+        width: 100%;
+        background-color: #f1f1f1;
+        border: 1px solid #d3d3d3;
+        padding: 30px 15px;
+      }
+      .content li {
+        width: 100%;
+        padding: 30px 15px;
+        background-color: white;
+        border: 1px solid #d3d3d3;
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
 
     <!-- マウント -->
-    <div id="fruits-container"></div>
+    <div id="fruits-list">
+      <page-header class="header">
+        <h1 slot="header">冬の果物</h1>
+      </page-header>
+      <page-content class="content">
+          <ul slot="content">
+            <li>スイカ</li>
+            <li>マンゴー</li>
+          </ul>
+      </page-content>
+    </div>
 
     <!-- vueアプリケーション -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.22/dist/vue.js"></script>
